fix text overflow in non-chrome browsers

--- a/ui/app/styles/components/selectable-card.scss
+++ b/ui/app/styles/components/selectable-card.scss
@@ -78,6 +78,7 @@
       justify-self: end;
 
       font-weight: $font-weight-semibold;
+      white-space: nowrap;
 
       @include until($mobile) {
         overflow: hidden;
